z-index fix

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -38,6 +38,7 @@ nav {
     position: fixed;
     width: 100%;
     top: 0;
+    z-index: 999;
 }
 
 nav > ul {
